k8s/system/argo-cd/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-cd
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
