k8s/system/argo-cd/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bbc
  annotations:
    tailscale.com/tailnet-fqdn: bbc-operator.spotted-halfmoon.ts.net

spec:
  type: ExternalName
  externalName: placeholder # generated
