k8s/system/argo-cd/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-cd

spec:
  routes:
    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`argocd.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    - kind: Rule
      match: Host(`argocd.starry.blue`)
      services:
        - name: argo-cd-argocd-server
          # MEMO: リダイレクトループが発生するため、https を使用している
          port: https
          scheme: https
          serversTransport: allow-insecure
